Moved cropper from main to header files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-devel/
-logs/
+install/
+log/
 build/
 bin/
 lib/
@@ -49,3 +49,6 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+
+# VS Code
+.vscode/
